--- a/main.less
+++ b/main.less
@@ -63,3 +63,16 @@ body {
 
 ._jsPlumb_connector { z-index:4; }
 ._jsPlumb_endpoint, .endpointTargetLabel, .endpointSourceLabel{ z-index:21;cursor:pointer; }
+
+#google_ads_container_1 {
+	position: absolute;
+	top:0px;
+    bottom:0px;
+    right:0px;
+    background-color: #FFFFFF;
+    height: 100%;
+    z-index: -1;
+}
+#google_ads_container_2 {
+	padding-top: 105px;
+}
